# cliqu3-rust

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  push.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  cache.rs  lib.rs  main.rs
src-tauri/src/call/: audio_input.rs  audio_output.rs  encoder.rs  handler.rs  mod.rs  rtp.rs
src-tauri/src/iroh/: call_old.rs  cliqu3db.rs  mod.rs  streams.rs
src/components/: ConnectButton.tsx  MetaMaskConnect.tsx  WalletConnectButton.tsx
src/components/dms/: DirectMessage.tsx  DirectMessages.tsx  NewDirectMessage.tsx
src/components/dms/nav/: DirectMessageNavButton.tsx  DirectMessagesNav.tsx  NavItems.tsx
src/components/login/: SavedUsers.tsx  WalletConnect.tsx
src/components/server/: AddChannelModal.tsx  Messages.tsx  Server.tsx  Sidebar.tsx  TextChannelButton.tsx  VoiceChannelButton.tsx
src/components/server/channel/: BottomBar.tsx  ChatChannel.tsx  GIFs.tsx  MembersList.tsx  Reply.tsx
src/components/server/emojis/: EmojiElement.tsx  EmojiGrid.tsx
src/components/server/message/: DisplayName.tsx  Interactions.tsx  LinkPreview.tsx  MessageElement.tsx  Reaction.tsx
src/components/settings/: Settings.tsx  SettingsContent.tsx  SettingsNav.tsx  SettingsNavButton.tsx
src/components/settings/content/: UpdateProfile.tsx
src/components/sidenav/: ServerButton.tsx  SideNav.tsx
src/components/sidenav/optionsMenu/: CreateServerModal.tsx  OptionsMenuButton.tsx
src/components/user/: ProfileControls.tsx  UserInfo.tsx  UserInfoEditable.tsx
src/screens/: Home.tsx  Login.tsx  Splash.tsx
src/state-management/: dmStore.ts  globalStore.ts  serverStore.ts  userStore.ts
src/types/: messageTypes.ts  serverTypes.ts  userTypes.ts
