[package]
name = "cliqu3"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cliqu3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh = { version = "0.93.1", features = ["discovery-local-network"] }
tokio = "1.47.1"
anyhow = "1.0.99"
rand = "0.8.5"
iroh-gossip = "0.93.1"
futures-lite = "2.6.1"
data-encoding = "2.9.0"
iroh-docs = "0.93.1"
iroh-blobs = "0.95.0"
rtp-rs = "0.6.0"
cpal = "0.16.0"
iroh-roq = { path = "./crates/iroh-roq" }
bytes = "1.10.1"
opus = { git = "https://github.com/DCNick3/opus-rs.git", branch = "unsafe-libopus", default-features = false, features = [
    "unsafe-libopus-backend",
] }
uuid = { version = "1.18.0", features = ["v4"] }
hmac = "0.12.1"
sha2 = "0.10.9"
lazy_static = "1.5.0"
tokio-util = "0.7.16"
walletconnect-client = "0.2.0"
url = "2.5.7"
moka = { version = "0.12.11", features = ["sync"] }
rusqlite = "0.37.0"
